# Multi-Source-Intelligence-Summarizer

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
agents/: __init__.py  base_agent.py  blog_agent.py  classifier.py  legal_agent.py  news_agent.py  orchestrator.py  research_agent.py  source_authority.py
api/: main.py  qa_router.py  schemas.py
conflict/: resolver.py  strategies.py
data/: news_trust_db.json
db/: connection.py  models.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: QAPanel.tsx
frontend/src/pages/: DocTypesPage.tsx  HistoryPage.tsx  ReportPage.tsx  SubmitPage.tsx
infra/: main.tf  outputs.tf  variables.tf
infra/modules/ecr/: main.tf  outputs.tf
infra/modules/ecs/: main.tf  outputs.tf  variables.tf
infra/modules/networking/: main.tf  outputs.tf
infra/modules/s3_cloudfront/: main.tf  outputs.tf  variables.tf
infra/modules/secrets/: main.tf  outputs.tf  variables.tf
summarizer/: bart_summarizer.py  base.py  factory.py  rag_summarizer.py
tests/: conftest.py  test_classifier.py  test_credibility.py  test_resolver.py  test_summarizer.py
utils/: hierarchical_summarizer.py  paper_chunker.py
